updated visual studio project for weaponguide

--- a/source/tools/win/tools.vcproj
+++ b/source/tools/win/tools.vcproj
@@ -326,6 +326,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\unitcostcalculator-standard.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\vehicletype.cpp"
 				>
 			</File>
