--- a/source/tools/win/demount.vcproj
+++ b/source/tools/win/demount.vcproj
@@ -62,11 +62,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.debug.lib SDLmain.lib"
+				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-vc90-d-2_0.lib SDLmain.lib"
 				ShowProgress="0"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin\demount.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp2)\MSVC_Net2003\$(ConfigurationName)\&quot;"
 				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/demount.pdb"
@@ -149,7 +149,7 @@
 				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.lib SDLmain.lib"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin\demount.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp2)\MSVC_Net2003\$(ConfigurationName)\&quot;"
 				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/demount.pdb"
