--- a/source/tools/win/weaponguide.vcproj
+++ b/source/tools/win/weaponguide.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../..;../../tools;../../libs/getopt;&quot;$(libsigcpp)&quot;;&quot;../../libs/loki-0.1.6/include&quot;"
+				AdditionalIncludeDirectories="../..;../../tools;../../libs/getopt;&quot;$(libsigcpp2)&quot;;&quot;../../libs/loki-0.1.6/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;HEXAGON;_WIN32_;converter;_SDL_"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -68,7 +68,7 @@
 				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib SDLmm.lib SDL_image.lib triangulate.lib SDLmain.lib sigc-1.2.debug.lib libpng13d.lib"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)/bin/weaponguide.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;../../$(ConfigurationName)/lib&quot;;&quot;../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
+				AdditionalLibraryDirectories="&quot;../../$(ConfigurationName)/lib&quot;;&quot;../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(libsigcpp2)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
 				AdditionalManifestDependencies=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/weaponguide.pdb"
@@ -127,7 +127,7 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="../..;../../tools;../../libs/getopt;&quot;$(libsigcpp)&quot;;&quot;../../libs/loki-0.1.6/include&quot;"
+				AdditionalIncludeDirectories="../..;../../tools;../../libs/getopt;&quot;$(libsigcpp2)&quot;;&quot;../../libs/loki-0.1.6/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;HEXAGON;_WIN32_;converter;minimalIO;_MSC_VER;_SDL_"
 				StringPooling="false"
 				MinimalRebuild="false"
@@ -153,7 +153,7 @@
 				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib SDLmm.lib SDL_image.lib triangulate.lib SDLmain.lib sigc-1.2.lib libpng13.lib"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)/bin/weaponguide.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;../../$(ConfigurationName)/lib&quot;;&quot;../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
+				AdditionalLibraryDirectories="&quot;../../$(ConfigurationName)/lib&quot;;&quot;../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(libsigcpp2)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
 				AdditionalManifestDependencies=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/weaponguide.pdb"
