changed expat detection

--- a/configure.ac
+++ b/configure.ac
@@ -431,7 +431,7 @@ fi
 
 
 AC_CHECK_HEADER(expat.h,,AC_LIB_MISSING( Expat, http://expat.sourceforge.net))
-AC_CHECK_LIB(expat, XML_ParserCreate,,AC_LIB_MISSING( Expat, http://expat.sourceforge.net))
+AC_SEARCH_LIBS(XML_ParserCreate,expat,,AC_LIB_MISSING( Expat, http://expat.sourceforge.net))
 
 AC_CHECK_PROG(zipfound,zip,yes,no)
 if test $zipfound != yes; then 
