new icon for PBP Editor (by motsch)

--- a/.hgignore
+++ b/.hgignore
@@ -43,3 +43,4 @@ glob:*.user
 glob:source/win32/msvc/**/*.dep
 glob:*.exe.embed.manifest
 glob:source/libs/loki-0.1.6/**/*.dep
+glob:source/win32/msvc/Release/**/*.zip
