new sigc++ dll added to installer

--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -74,6 +74,7 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/libFLAC.dll"
   File "@inst_win32_DLL_dir@/SDL_image.dll"
   File "@inst_win32_DLL_dir@/sdl_sound.dll"
+  File "@inst_win32_DLL_dir@/sigc-vc90-2_0.dll"
   File "@inst_win32_DLL_dir@/vorbisfile.dll"
   File "@inst_win32_DLL_dir@/libmikmod-2.dll"
   File "@inst_win32_DLL_dir@/libcurl.dll"
