--- a/installer/Makefile.in
+++ b/installer/Makefile.in
@@ -498,6 +498,7 @@ uninstall-am:
 
 
 installer: 
+	svn update @inst_win32_build_dir@
 	cat $(abs_top_srcdir)/COPYING | unix2dos > licdata.txt
 	makensis asc.nsi
 
