adding windows packaging script

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,4 +41,7 @@ dist-hook:
 	rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore -o -name ".#*"`
 	rm -rf `find $(distdir)/data/music -name "*.ogg" `
 	chmod ugo-x doc/manpages/*.6 doc/unitguide/output/*.gif doc/unitguide/output/*.html doc/unitguide/output/*.txt
+
+zipwin: 
+	scripts/zipwin @inst_win32_build_dir@ @inst_win32_DLL_dir@ `scripts/getversion source/strtmesg.cpp` 
 	
