make builds reproducible (patch by Alexandre Detiste)

--- a/data/dialog/Makefile.am
+++ b/data/dialog/Makefile.am
@@ -3,7 +3,7 @@ pkgdatadir 		= $(datadir)/games/@PACKAGE@
 pkgdata_DATA = asc2_dlg.zip
 
 asc2_dlg.zip: $(srcdir)/asc2_dlg.theme $(srcdir)/asc/*.bmp $(srcdir)/asc/*.ttf $(srcdir)/asc/*.png
-	cd $(srcdir) && zip -9 -r @abs_builddir@/asc2_dlg.zip asc2_dlg.theme ./asc/* -i *.png *.bmp *.ttf *.theme
+	cd $(srcdir) && zip -X -9 -r @abs_builddir@/asc2_dlg.zip asc2_dlg.theme ./asc/* -i *.png *.bmp *.ttf *.theme
 
 CLEANFILES = asc2_dlg.zip 
 
