--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install libs
-      run: scripts/getUbuntuPackages
+      run: sudo apt-get update && scripts/getUbuntuPackages
     - name: configure
       run: ./configure
     - name: make
